[package]
name        = "dirs-2"
version     = "3.0.1"
authors     = ["Manfred Endres <manfred.endres@tslarusso.de", "Simon Ochsenreither <simon@ochsenreither.de>"]
description = "A tiny low-level library that provides platform-specific standard locations of directories for config, cache and other data on Linux, Windows, macOS and Redox by leveraging the mechanisms defined by the XDG base/user directory specifications on Linux, the Known Folder API on Windows, and the Standard Directory guidelines on macOS."
readme      = "README.md"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/Larusso/dirs-rs"
maintenance = { status = "actively-developed" }
keywords    = ["xdg", "basedir", "app_dirs", "path", "folder"]

[dependencies]
dirs-sys = "0.3.5"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["knownfolders"] }
